# violet-hass

./: .cspell-words.txt  .cspell.json  .gitattributes  .gitignore  .markdownlint  .pylintrc  .yamllint  1.sh  =0.0.24  AGENTS.md  ARCHITECTURE.md  BACKLOG_PROGRESS.md  CACHE_CLEANUP.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODEX_CONTEXT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTROL_IMPLEMENTATION_ROADMAP.md  Dockerfile.test  FINAL_TEST_REPORT_ALL_FEATURES.md  ICON_UPGRADE_SUMMARY.md  INSTALLATION_RECONFIGURATION_TEST_2026-02-23.md  INTEGRATION_TEST_REPORT.md  LICENSE  MULTI_CONTROLLER_GUIDE.md  PHPBB_COMPLETE_CHANGELOG.txt  PHPBB_RELEASE_BETA9.txt  PYPI_MIGRATION_GUIDE.md  README.de.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.0.13.md  RELEASE_NOTES_v0.0.14.md  RELEASE_NOTES_v0.0.16.md  RELEASE_NOTES_v0.0.19.md  RELEASE_NOTES_v0.0.20.md  RELEASE_NOTES_v0.0.25.md  (+27 more)
.claude/: settings.local.json
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: auto-label-pr.yml  automerge.yml  change.yml  changelog.yml  claude-code-review.yml  claude.yml  codacy.yml  codecov.yml  codeql.yml  codespaces-prebuild.yml  deploy-book.yml  dev-release.yml  feature-release.yml  greetings.yml  ha-dev-early-warning.yml  hacs-validation.yml  hacs_action.yml  hassfest-validation.yml  hassfest.yml  label.yml  labeler.yml  lint.yml  maintenance.yml  mdbook.yml  pr-management.yml  publish-api.yml  release-changelog.yml  release.yml  restlichen.yml  security.yml  spellcheck.yml  stale.yml  status-check-labels.yml  test-api.yml  trufflehog.yml  update-api-dependency.yml  update-release-body.alt  update-release-body.yml  (+5 more)
Dashboard/: DASHBOARD_GUIDE.md  README.md  VIOLET_CARD_EXAMPLES.yaml  lovelace.txt  pool-dashboard.yaml  pool_control_card.yaml  pool_control_compact.yaml  pool_control_simple_blocks.yaml  pool_control_status.yaml  pool_control_ultimate.yaml
Dokumente/: example.json  getReadings.json  manual.txt
Tools/: inputhelper.txt  lovelace.txt
blueprints/: README.md
custom_components/: services.yaml
custom_components/violet_pool_controller/violet_pool_api/: README.md  api.py  const_api.py  pyproject.toml  setup.py  utils_rate_limiter.py  utils_sanitizer.py
docs/: AI_PROMPT_restore_api_constants.md  API_PACKAGE_CONTRACT.md  API_REFERENCE.md  API_SENSOR_REFERENCE.md  AUTO_DISCOVERY_GUIDE.md  BRONZE_SILVER_TEST_REPORT.md  CHANGELOG.md  CHANGELOG_CODE_REVIEW.md  CI_CD_ACTION_PINNING.md  CODE_OF_CONDUCT.md  CODE_REVIEW_2026-02-23.md  COMPLETE_QUALITY_AUDIT.md  DISCOVERY_FIX_EXPLANATION.md  DOCKER_INTEGRATION_TEST_REPORT.md  ENTITIES.md  Extended-Logging-de.md  Extended-Logging.md  FINAL_REPORT.de.md  FINAL_REPORT.md  FINAL_TEST_REPORT.de.md  FINAL_TEST_REPORT.md  Fetching-Data.md  GOLD_LEVEL_GUIDE.md  HA_ADDON_REFERENCE.md  HA_QUALITY_SCALE_PROGRESS.md  IMPORTANT_MIGRATION_GUIDE.de.md  IMPORTANT_MIGRATION_GUIDE.md  INSTALLATION_GUIDE.md  Initialization-&-Authentication.md  Installation.md  MULTI_CONTROLLER_GUIDE.md  RECONFIGURATION_GUIDE.md  REFACTORING_CONCEPT.md  RELEASE_NOTES.md  SECURITY.md  TESTING.md  TESTING_CHECKLIST.md  TEST_STATUS_REPORT.md  TROUBLESHOOTING_AUTOMATIONS.md  VIOLET_CARD_QUICK_START.de.md  (+5 more)
github_wiki_content/: Changelog.md  Configuration.md  Entities.md  Home.md  Icon-Reference.md  Installation.md
scripts/: check-ha-logs.sh  forum_poster.py  quick-import-test.py  run-tests.sh  setup-test-env.sh  start-docker-test.ps1  start-ha-test.sh
src/: SUMMARY.md  chapter_1.md  custom.css  introduction.md  release-text.yml
tests/: __init__.py  conftest.py  conftest_api_mock.py  conftest_ha_mock.py  getReadings.csv  getReadings.xlsx  getReadings_spec.json  live_dosstart_check.py  live_dosstop_check.py  live_phm_check.py  live_readonly_check.py  mock_server.py  test_api.py  test_calibration_and_names.py  test_comprehensive.py  test_config_flow.py  test_cover.py  test_device.py  test_diagnostic_services.py  test_discovery.py  test_dosing_use_flag.py  test_entity_names.py  test_entity_state.py  test_error_handler.py  test_ext1_switching.py  test_hardware_config.py  test_http_control.py  test_improvements.py  test_improvements_final.py  test_integration.py  test_mock_server.py  test_offline_scenarios.py  test_platform_errors.py  test_reconfigure_flow.py  test_sanitizer.py  test_security_fixes.py  test_security_principles.py  test_sensor_generic.py  test_service_control.py  test_services.py  (+5 more)
violet_poolcontroller_api/: CHANGELOG.md  CODE_OF_CONDUCT.md  RELEASE_NOTES_v0.0.17.md  RELEASE_NOTES_v0.0.18.md  RELEASE_NOTES_v0.0.22.md  RELEASE_NOTES_v0.0.24.md  SECURITY.md  __init__.py  api.py  circuit_breaker.py  const_api.py  const_devices.py  pyproject.toml  utils_rate_limiter.py  utils_sanitizer.py
(+227 files in other folders)
