[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "violet-hass"
version = "2.0.0"
description = "Home Assistant integration + API client for Violet pool controllers"
readme = "README.md"
requires-python = ">=3.14.2"
license = { text = "AGPL-3.0-or-later" }

[project.optional-dependencies]
api = ["violet-poolController-api"]
dev = [
    "violet-poolController-api[test]",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-homeassistant-custom-component>=0.13.337",
    "ruff>=0.15.16",
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C4", "SIM"]
extend-select = ["T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
disallow_untyped_defs = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "violet_poolcontroller_api.*"
ignore_missing_imports = true
