[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "violet-hass"
version = "2.0.1"
description = "Home Assistant integration + API client for Violet pool controllers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }

[project.optional-dependencies]
api = ["violet-poolController-api"]
dev = [
    "violet-poolController-api[test]",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-homeassistant-custom-component>=0.13.337",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C4", "SIM"]
extend-select = ["T20"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Live hardware check scripts use print() for CLI output
"tests/live_*_check.py" = ["T201"]
# Diagnostic test output uses print() for progress markers
"tests/test_improvements.py" = ["T201"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = false
warn_unused_configs = true
mypy_path = "violet_poolcontroller_api"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "violet_poolcontroller_api.*"
ignore_missing_imports = true
